--- a/index.html
+++ b/index.html
@@ -14,49 +14,45 @@
         <div class="container">
             <div class="col-sm">
         <div class="card-body">
-            <h5 class="card-title"> Manager: asfd</h5>
-            <h6 class="card-subtitle mb-2 text-muted">job</h6>
+            <h5 class="card-title"> Manager: asdg;j</h5>
+            <h6 class="card-subtitle mb-2 text-muted">asdglkj</h6>
             <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                Manager office number: asdgflkj
+                Contact: asdg;lkj
             </p>
         </div>
     </div>
             <div class="col-sm">
                 <div class="card-body">
-                <h5 class="card-title"> Manager: 2345</h5>
-                <h6 class="card-subtitle mb-2 text-muted">job</h6>
+                <h5 class="card-title"> Intern: alksdj</h5>
+                <h6 class="card-subtitle mb-2 text-muted">ID: asdgljk</h6>
                 <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                alksdj is a new intern at our company. Potential future with company is still undecided. You can reach them at asdglkj and they are currently attending or have graduated from asdgljk
                 </p>
                 </div>
                 </div><div class="col-sm">
                 <div class="card-body">
-                <h5 class="card-title"> Manager: 245432</h5>
-                <h6 class="card-subtitle mb-2 text-muted">job</h6>
+                <h5 class="card-title"> Intern: 2314</h5>
+                <h6 class="card-subtitle mb-2 text-muted">ID: 12345</h6>
                 <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                2314 is a new intern at our company. Potential future with company is still undecided. You can reach them at 2346 and they are currently attending or have graduated from 23
                 </p>
                 </div>
                 </div>
             <div class="col-sm">
                 <div class="card-body">
-                <h5 class="card-title"> Manager: asdg</h5>
-                <h6 class="card-subtitle mb-2 text-muted">job</h6>
+                <h5 class="card-title"> Engineer: asgkdj</h5>
+                <h6 class="card-subtitle mb-2 text-muted">ID: asgd;lkj</h6>
                 <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                asgkdj is an engineer at our company. You can reach them at asdglkj and their github is undefined.
                 </p>
                 </div>
                 </div><div class="col-sm">
                 <div class="card-body">
-                <h5 class="card-title"> Manager: asdg</h5>
-                <h6 class="card-subtitle mb-2 text-muted">job</h6>
+                <h5 class="card-title"> Engineer: asldgkj</h5>
+                <h6 class="card-subtitle mb-2 text-muted">ID: asdglkj</h6>
                 <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                asldgkj is an engineer at our company. You can reach them at asdgo;ih and their github is undefined.
                 </p>
                 </div>
                 </div>
