read me finished

--- a/index.html
+++ b/index.html
@@ -14,45 +14,45 @@
         <div class="container">
             <div class="col-sm">
         <div class="card-body">
-            <h5 class="card-title"> Manager: asdg;j</h5>
-            <h6 class="card-subtitle mb-2 text-muted">asdglkj</h6>
+            <h5 class="card-title"> Manager: John</h5>
+            <h6 class="card-subtitle mb-2 text-muted">1</h6>
             <p class="card-text">
-                Manager office number: asdgflkj
-                Contact: asdg;lkj
+                Manager office number: 12345
+                Contact: John@bossman@gmail.com
             </p>
         </div>
     </div>
             <div class="col-sm">
                 <div class="card-body">
-                <h5 class="card-title"> Intern: alksdj</h5>
-                <h6 class="card-subtitle mb-2 text-muted">ID: asdgljk</h6>
+                <h5 class="card-title"> Intern: intern 1</h5>
+                <h6 class="card-subtitle mb-2 text-muted">ID: 0987</h6>
                 <p class="card-text">
-                alksdj is a new intern at our company. Potential future with company is still undecided. You can reach them at asdglkj and they are currently attending or have graduated from asdgljk
+                intern 1 is a new intern at our company. Potential future with company is still undecided. You can reach them at intern1 and they are currently attending or have graduated from uofu
                 </p>
                 </div>
                 </div><div class="col-sm">
                 <div class="card-body">
-                <h5 class="card-title"> Intern: 2314</h5>
-                <h6 class="card-subtitle mb-2 text-muted">ID: 12345</h6>
+                <h5 class="card-title"> Intern: intern 2</h5>
+                <h6 class="card-subtitle mb-2 text-muted">ID: 4857</h6>
                 <p class="card-text">
-                2314 is a new intern at our company. Potential future with company is still undecided. You can reach them at 2346 and they are currently attending or have graduated from 23
+                intern 2 is a new intern at our company. Potential future with company is still undecided. You can reach them at intern2hotmail.com and they are currently attending or have graduated from uvu
                 </p>
                 </div>
                 </div>
             <div class="col-sm">
                 <div class="card-body">
-                <h5 class="card-title"> Engineer: asgkdj</h5>
-                <h6 class="card-subtitle mb-2 text-muted">ID: asgd;lkj</h6>
+                <h5 class="card-title"> Engineer: engineer 1</h5>
+                <h6 class="card-subtitle mb-2 text-muted">ID: 12342</h6>
                 <p class="card-text">
-                asgkdj is an engineer at our company. You can reach them at asdglkj and their github is undefined.
+                engineer 1 is an engineer at our company. You can reach them at Engineer1@hotmail.com and their github is undefined.
                 </p>
                 </div>
                 </div><div class="col-sm">
                 <div class="card-body">
-                <h5 class="card-title"> Engineer: asldgkj</h5>
-                <h6 class="card-subtitle mb-2 text-muted">ID: asdglkj</h6>
+                <h5 class="card-title"> Engineer: engineer 2</h5>
+                <h6 class="card-subtitle mb-2 text-muted">ID: 595837</h6>
                 <p class="card-text">
-                asldgkj is an engineer at our company. You can reach them at asdgo;ih and their github is undefined.
+                engineer 2 is an engineer at our company. You can reach them at engineer2@mac.com and their github is undefined.
                 </p>
                 </div>
                 </div>
